[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/environment/saw/saw_7.png" type="Texture" id=1]
[ext_resource path="res://assets/environment/saw/saw_4.png" type="Texture" id=2]
[ext_resource path="res://assets/environment/saw/saw_6.png" type="Texture" id=3]
[ext_resource path="res://assets/environment/saw/saw_2.png" type="Texture" id=4]
[ext_resource path="res://assets/environment/saw/saw_3.png" type="Texture" id=5]
[ext_resource path="res://assets/environment/saw/saw_5.png" type="Texture" id=6]
[ext_resource path="res://assets/environment/saw/saw_0.png" type="Texture" id=7]
[ext_resource path="res://assets/environment/saw/saw_1.png" type="Texture" id=8]
[ext_resource path="res://scenes/environment/TargetPoint.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/environment/SawBody.gd" type="Script" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 40.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 18.0

[node name="Saw" type="Area2D"]
position = Vector2( 36.4384, 0 )
z_index = -1
collision_layer = 2
collision_mask = 17
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
z_index = -1
frames = SubResource( 1 )
frame = 4
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="WaitTimer" type="Timer" parent="."]
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="TargetPoints" type="Node" parent="."]

[node name="TargetPoint" parent="TargetPoints" instance=ExtResource( 9 )]
position = Vector2( -40, 0 )

[node name="TargetPoint2" parent="TargetPoints" instance=ExtResource( 9 )]
position = Vector2( 40, 0 )
[connection signal="body_entered" from="." to="." method="_on_SawBody_body_entered"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_WaitTimer_timeout"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
